# Pong-SFML

./: .gitignore  2  CMakeLists.txt  README.md
include/: Ball.h  BotPaddle.h  Game.h  Global.h  Paddle.h  Player1Paddle.h  Time.h
src/: Ball.cpp  BotPaddle.cpp  Game.cpp  Paddle.cpp  Player1Paddle.cpp  Time.cpp  main.cpp
